# AuctionProject

./: .gitignore  README.md  pyproject.toml  requirements.txt
auction_project/: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yml  requirements.txt
auction_project/auction_project/: asgi.py  settings.py  urls.py  wsgi.py
auction_project/auctions/: admin.py  pydantic.py  signals.py  tasks.py  urls.py  views.py
auction_project/auctions/migrations/: 0001_initial.py
auction_project/auctions/models/: Auction.py  Bid.py  __init__.py
auction_project/auctions/templates/: all-auctions.html  auction-create.html  auction-delete.html  auction-details.html  auction-update.html  bid-create.html
auction_project/auctions/tests/: factories.py  test_auction.py  test_bid.py
auction_project/auctions/views/: all_auctions.py  auctions.py  bids.py
auction_project/core_settings/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
auction_project/core_settings/api/: api.py  auctions.py  bids.py  items.py  users.py  wallets.py
auction_project/items/: admin.py  category-urls.py  factories.py  pydantic.py  tests.py  urls.py
auction_project/items/migrations/: 0001_initial.py
auction_project/items/models/: Category.py  Item.py  __init__.py
auction_project/items/tests/: test_item.py
auction_project/items/views/: categories.py  items.py
auction_project/templates/: base.html  base_category.html  base_light.html
auction_project/users/: admin.py  factories.py  forms.py  pydantic.py  signals.py  tests.py  urls.py
auction_project/users/migrations/: 0001_initial.py
auction_project/users/models/: CustomUser.py  Wallet.py  __init__.py
auction_project/users/templates/: all-users.html  login.html  profile-detail.html  profile-update.html  (+2 more)
(+14 files in other folders)
